# IST_group_seminar_2025

./: .gitignore  .gitingnore  README.md  pyproject.toml
week3/: 2-4.py  2-5.py  2-6.py  3-1-2.py  GMM_Gibbs.py  MHNG.py  MHNG_Agent.py  data_a.txt  data_b.txt
week6/: tree_of_thought_test.py  utils.py
